[package]
name = "blurdetect"
version = "0.1.0"
edition = "2021"
description = "A lightweight CLI tool for detecting blurry images using Laplacian variance."
license = "MIT"
repository = "https://github.com/microuser/blurdetect"  # Assuming a repo; adjust as needed
authors = ["@microuser", "Claude Sonnet 4"]

[dependencies]
image = "0.25.1"
exif = "0.6.0"
clap = { version = "4.5", features = ["derive"] }