[package]
name = "grepfuzz"
version = "0.1.0"
edition = "2021"
description = "A lightweight CLI tool for detecting blurry images using Laplacian variance."
license = "MIT"
repository = "https://github.com/microuser/grepfuzz"  # Assuming a repo; adjust as needed
authors = ["@microuser", "Claude Sonnet 4"]

[dependencies]
image = "0.25.1"
rexif = "0.7"
atty = "0.2"
config = "0.13"
rand = "0.8"
clap = { version = "4.5", features = ["derive"] }
opencv = "0.95.0"
serde = "1.0.219"
toml = "0.9.2"
ansi_term = "0.12"
